--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://www.instagram.com/sousa_heitor7/" target="_blank">Heitor Souza</a></p>
     </footer>
 </body>
 </html>
