--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="#">Home</a>
         <a href="#">Notícias</a>
         <a href="#">Contato</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
